--- a/.github/workflows/terraform-k8s.yml
+++ b/.github/workflows/terraform-k8s.yml
@@ -31,7 +31,10 @@ jobs:
 
       # Authenticate with Kubernetes Cluster (using kubeconfig)
       - name: Set up kubeconfig
-        run: echo "${{ secrets.KUBECONFIG }}" > ~/.kube/config
+  	run: |
+    	mkdir -p ~/.kube  # Creates the ~/.kube directory if it doesn't exist
+    	echo "${{ secrets.KUBECONFIG }}" > ~/.kube/config  # Writes the KUBECONFIG secret to the config file
+
 
       # Terraform init
       - name: Terraform Init
