Fully automate Minikube inside GitHub Actions

--- a/.github/workflows/terraform-k8s.yml
+++ b/.github/workflows/terraform-k8s.yml
@@ -17,26 +17,45 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Set up Terraform
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_version: "1.5.7"  # Change this if necessary
+      # Install Minikube
+      - name: Install Minikube
+        run: |
+          curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
+          sudo install minikube-linux-amd64 /usr/local/bin/minikube
 
-      # Set up kubectl
+      # Start Minikube inside GitHub Actions
+      - name: Start Minikube
+        run: minikube start --driver=docker
+
+      # Verify Minikube is running
+      - name: Check Minikube Status
+        run: minikube status
+
+      # Set up kubectl (Kubernetes CLI)
       - name: Set up kubectl
         uses: azure/setup-kubectl@v1
         with:
           version: 'v1.21.0'
 
-      # Authenticate with Kubernetes Cluster (using kubeconfig)
-      - name: Set up kubeconfig
+      # Authenticate with Kubernetes Cluster
+      - name: Configure Kubeconfig
         run: |
-          mkdir -p ~/.kube  # Creates the ~/.kube directory if it doesn't exist
-          echo "${{ secrets.KUBECONFIG }}" | base64 --decode > ~/.kube/config
-          echo "${{ secrets.K8S_CLIENT_CERT }}" | base64 --decode > ~/.kube/client.crt
-          echo "${{ secrets.K8S_CLIENT_KEY }}" | base64 --decode > ~/.kube/client.key
-          echo "${{ secrets.K8S_CA_CERT }}" | base64 --decode > ~/.kube/ca.crt
+          mkdir -p ~/.kube
+          minikube kubectl -- get nodes
+          minikube update-context
+          minikube kubectl config view --flatten > ~/.kube/config
+
+      # Verify Kubeconfig
+      - name: Verify Kubernetes Context
+        run: |
+          kubectl cluster-info
+          kubectl get nodes
+
+      # Set up Terraform
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: "1.5.7"
 
       # Terraform init
       - name: Terraform Init
